"Committing Quiz website testing if it works"

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Results</a></li>
-            <li><a href="#">Take the Quiz!</a></li>
+            <li><a href="Quiz.htmlS">Take the Quiz!</a></li>
         </ul>
     </nav>
     <div>
