Added get mapping for other html pages and navigation links between all pages, linked images and style sheets through thymleaf

--- a/src/main/resources/templates/scores.html
+++ b/src/main/resources/templates/scores.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scores</title>
-    <a href="home.html">home</a>
-    <a href="scores.html">Scores</a>
 </head>
 <body>
+<nav>
+    <ul>
+        <li><a href="/home">Home</a></li>
+        <li><a href="/scores">Scores</a></li>
+        <li><a href="/quiz">Take A Quiz!</a></li>
+    </ul>
+</nav>
 <h1>Top Scores</h1>
 <main>
     <h2>Top Scores Multi</h2>
