--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,27 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Home</title>
-    <link href="/Website/css/home.css" th:href="@{/css/home.css}" rel="stylesheet" />
-    <nav>
-        <a id = "home" href="@{/home}">Home</a>
-        <a id = "scores" href="@{/scores}">Scores</a>
-    </nav>
+    <link href="./static/css/home.css" th:href="@{/css/style.css}" rel="stylesheet" />
 </head>
 <body>
-
+<nav>
+    <ul>
+        <li><a href="/home">Home</a></li>
+        <li><a href="/scores">Scores</a></li>
+        <li><a href="/quiz">Take A Quiz!</a></li>
+    </ul>
+</nav>
 <h1>Quiz Home</h1>
 <main id = quizes>
     <div>
         <form action="#" th:action="@{/multiTest}" method="post" class="quiz-form">
             <h2>Multi Test</h2>
-            <img src="/Website/images/multipeChoicePlaceHolder.png" alt="multipeChoicePlaceHolder">
+            <img src="/static/images/multipeChoicePlaceHolder.png" th:src="@{/images/multipeChoicePlaceHolder.png}"
+                 alt="multipeChoicePlaceHolder">
             <button id="multiTest" type="submit">Start</button>
         </form>
     </div>
     <div>
         <form action="#" th:action="@{/shortFormTest}" method="post" class="quiz-form">
             <h2>Short Form</h2>
-            <img src="/Website/images/ShortAnswerPlaceHolder.png" alt="shortAnswerPlaceHolder">
+            <img src="/static/images/ShortAnswerPlaceHolder.png" th:src="@{/images/ShortAnswerPlaceHolder.png}"
+                 alt="shortAnswerPlaceHolder">
             <button id="shortFormTest" type="submit">Start</button>
         </form>
     </div>
