--- a/src/main/resources/templates/quizmc.html
+++ b/src/main/resources/templates/quizmc.html
@@ -2,14 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Quiz</title>
-    <link rel="stylesheet" type="text/css" href="..\static\style.css" th:href="@{/css/style.css}">
+    <link rel="stylesheet" type="text/css" href="..\static\css\style.css" th:href="@{/css/style.css}">
 </head>
 <body>
 <nav>
     <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="scores.html">Scores</a></li>
-        <li><a href="index.html">Login</a></li>
+        <li><a th:href="@{/home.html}">Home</a></li>
+        <li><a th:href="@{/scores.html}">Scores</a></li>
+        <li><a th:href="@{/index.html}">Login</a></li>
     </ul>
 </nav>
     <h1>Spring Quiz Multiple choice</h1>
