--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Quiz Results</title>
-        <link rel="stylesheet" href="/static/css/style.css" th:href="@{/css/style.css}">
+        <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}">
     </head>
 
     <body>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="scores.html">Scores</a></li>
-                <li><a href="index.html">Login</a></li>
+            <li><a th:href="@{/home.html}">Home</a></li>
+            <li><a th:href="@{/scores.html}">Scores</a></li>
+            <li><a th:href="@{/index.html}">Login</a></li>
             </ul>
         </nav>
         <div class="container">
