--- a/src/main/resources/templates/scores.html
+++ b/src/main/resources/templates/scores.html
@@ -8,9 +8,9 @@
 <body>
 <nav>
     <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="scores.html">Scores</a></li>
-        <li><a href="index.html">Login</a></li>
+        <li><a th:href="@{/home.html}">Home</a></li>
+        <li><a th:href="@{/scores.html}">Scores</a></li>
+        <li><a th:href="@{/index.html}">Login</a></li>
     </ul>
 </nav>
 <h1>Top Scores</h1>
