--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,30 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Home</title>
-    <link href="../static/css/home.css" th:href="@{/css/style.css}" rel="stylesheet" />
+    <link href="/src/main/resources/static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
 </head>
 <body>
 <nav>
     <ul>
-        <li><a th:href="@{/home.html}">Home</a></li>
-        <li><a th:href="@{/scores.html}">Scores</a></li>
-        <li><a th:href="@{/index.html}">Login</a></li>
+        <li><a href="/src/main/resources/templates/home.html" th:href="@{/home}">Home</a></li>
+        <li><a href="/src/main/resources/templates/scores.html" th:href="@{/scores}">Scores</a></li>
     </ul>
 </nav>
 <h1>Quiz Home</h1>
 <main id = quizes>
     <div>
-        <form action="#" th:action="@{/quizmc.html}" method="post" class="quiz-form">
+        <form action="#" th:action="@{/multiTest}" method="post" class="quiz-form">
             <h2>Multi Test</h2>
-            <img src="../static/images/multipeChoicePlaceHolder.png" th:src="@{/images/multipeChoicePlaceHolder.png}"
+            <img src="/src/main/resources/static/images/multipleChoiceQuiz.jpg" th:src="@{/images/multipleChoiceQuiz.jpg}"
                  alt="multipeChoicePlaceHolder">
             <button id="multiTest" type="submit">Start</button>
         </form>
     </div>
     <div>
-        <form action="#" th:action="@{/quizsa.html}" method="post" class="quiz-form">
+        <form action="#" th:action="@{/shortFormTest}" method="post" class="quiz-form">
             <h2>Short Form</h2>
-            <img src="../static/images/ShortAnswerPlaceHolder.png" th:src="@{/images/ShortAnswerPlaceHolder.png}"
+            <img src="/src/main/resources/static/images/shortAnswer.jpg" th:src="@{/images/shortAnswer.jpg}"
                  alt="shortAnswerPlaceHolder">
             <button id="shortFormTest" type="submit">Start</button>
         </form>
