--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,9 +9,9 @@
 <body>
     <nav>
         <ul>
-        <li><a th:href="@{/home.html}">Home</a></li>
-        <li><a th:href="@{/scores.html}">Scores</a></li>
-        <li><a th:href="@{/index.html}">Login</a></li>
+        <li><a th:href="@{/home}">Home</a></li>
+        <li><a th:href="@{/scores}">Scores</a></li>
+        <li><a th:href="@{/index}">Login</a></li>
         </ul>
     </nav>
     <div>
