--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,9 +7,9 @@
     <link href="/src/main/resources/static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
 </head>
 <body>
-<!--Need to Change to thymleaf link with th:href-->
 <nav>
     <ul>
+        <li><a href="/src/main/resources/templates/index.html" th:href="@{/index}">Login</a></li>
         <li><a href="/src/main/resources/templates/home.html" th:href="@{/home}">Home</a></li>
         <li><a href="/src/main/resources/templates/scores.html" th:href="@{/scores}">Scores</a></li>
     </ul>
