--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,9 +9,9 @@
 <body>
     <nav>
         <ul>
-        <li><a th:href="@{/home}">Home</a></li>
-        <li><a th:href="@{/scores}">Scores</a></li>
-        <li><a th:href="@{/index}">Login</a></li>
+            <li><a href="/src/main/resources/templates/index.html" th:href="@{/index}">Login</a></li>
+            <li><a href="/src/main/resources/templates/home.html" th:href="@{/home}">Home</a></li>
+            <li><a href="/src/main/resources/templates/scores.html" th:href="@{/scores}">Scores</a></li>
         </ul>
     </nav>
     <div>
