--- a/src/main/resources/templates/quizmc.html
+++ b/src/main/resources/templates/quizmc.html
@@ -8,9 +8,9 @@
 <!--Need to Change to thymleaf link with th:href-->
 <nav>
     <ul>
-        <li><a th:href="@{/home.html}">Home</a></li>
-        <li><a th:href="@{/scores.html}">Scores</a></li>
-        <li><a th:href="@{/index.html}">Login</a></li>
+        <li><a href="/src/main/resources/templates/index.html" th:href="@{/index}">Login</a></li>
+        <li><a href="/src/main/resources/templates/home.html" th:href="@{/home}">Home</a></li>
+        <li><a href="/src/main/resources/templates/scores.html" th:href="@{/scores}">Scores</a></li>
     </ul>
 </nav>
     <h1>Spring Quiz Multiple choice</h1>
