--- a/src/main/resources/templates/quizsa.html
+++ b/src/main/resources/templates/quizsa.html
@@ -8,12 +8,12 @@
 <!--Need to Change to thymleaf link with th:href-->
 <nav>
     <ul>
-        <li><a th:href="@{/home.html}">Home</a></li>
-        <li><a th:href="@{/scores.html}">Scores</a></li>
-        <li><a th:href="@{/index.html}">Login</a></li>
+        <li><a href="/src/main/resources/templates/index.html" th:href="@{/index}">Login</a></li>
+        <li><a href="/src/main/resources/templates/home.html" th:href="@{/home}">Home</a></li>
+        <li><a href="/src/main/resources/templates/scores.html" th:href="@{/scores}">Scores</a></li>
     </ul>
 </nav>
-    <h1>Spring Quiz Multiple choice</h1>
+    <h1>Spring Quiz Short Answer</h1>
     <form th:action="@{/submit-quiz}" th:object="${test}" method="post">
        <!--  <div th:each="question, iterStat : ${test.questions}">
             <p th:text="${iterStat.index + 1} + '. ' + ${question.questionText}"></p>
