Made it so logging in has functions and adds user to database, fixed seeding of database by adding generated keys

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
 <body>
 <nav>
     <ul>
-        <li><a href="/src/main/resources/templates/index.html" th:href="@{/index}">Login</a></li>
+        <li><a href="/src/main/resources/templates/index.html" th:href="@{/}">Login</a></li>
         <li><a href="/src/main/resources/templates/home.html" th:href="@{/home}">Home</a></li>
         <li><a href="/src/main/resources/templates/scores.html" th:href="@{/scores}">Scores</a></li>
     </ul>
