--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -10,7 +10,7 @@
     <!--Need to Change to thymleaf link with th:href-->
     <nav>
         <ul>
-            <li><a href="/src/main/resources/templates/index.html" th:href="@{/index}">Login</a></li>
+            <li><a href="/src/main/resources/templates/index.html" th:href="@{/}">Login</a></li>
             <li><a href="/src/main/resources/templates/home.html" th:href="@{/home}">Home</a></li>
             <li><a href="/src/main/resources/templates/scores.html" th:href="@{/scores}">Scores</a></li>
         </ul>
