--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,19 +17,19 @@
 <h1>Quiz Home</h1>
 <main id = quizes>
     <div>
-        <form action="#" th:action="@{/multiTest}" method="post" class="quiz-form">
-            <h2>Multi Test</h2>
-            <img src="/src/main/resources/static/images/multipleChoiceQuiz.jpg" th:src="@{/images/multipleChoiceQuiz.jpg}"
-                 alt="multipeChoicePlaceHolder">
-            <button id="multiTest" type="submit">Start</button>
+        <form action="#" th:action="@{/multiQuiz}" method="post">
+        <h2>Multi Test</h2>
+        <img src="/src/main/resources/static/images/multipleChoiceQuiz.jpg" th:src="@{/images/multipleChoiceQuiz.jpg}"
+             alt="multipeChoicePlaceHolder">
+        <button id="multiTest" type="submit">Multi Question</button>
         </form>
     </div>
     <div>
-        <form action="#" th:action="@{/shortFormTest}" method="post" class="quiz-form">
-            <h2>Short Form</h2>
-            <img src="/src/main/resources/static/images/shortAnswer.jpg" th:src="@{/images/shortAnswer.jpg}"
-                 alt="shortAnswerPlaceHolder">
-            <button id="shortFormTest" type="submit">Start</button>
+        <form action="#" th:action="@{/shortQuiz}" method="post" >
+        <h2>Short Form</h2>
+        <img src="/src/main/resources/static/images/shortAnswer.jpg" th:src="@{/images/shortAnswer.jpg}"
+             alt="shortAnswerPlaceHolder">
+        <button id="shortFormTest" type="submit">Short Answer</button>
         </form>
     </div>
 </main>
