--- a/src/main/resources/templates/quizmc.html
+++ b/src/main/resources/templates/quizmc.html
@@ -15,14 +15,10 @@
 </nav>
     <h1>Spring Quiz Multiple choice</h1>
     <form th:action="@{/submit-quiz}" th:object="${test}" method="post">
-<!--        <div th:each="question, iterStat : ${}">-->
-<!--            <p th:text="${iterStat.index + 1} + '. ' + ${question.questionText}"></p>-->
-<!--            <div th:each="option : ${question.options}">-->
-<!--                <label>-->
-<!--                    <input type="radio" th:field="*{questions[__${iterStat.index}__].selectedAnswer}" th:value="${option}"/>-->
-<!--                    <span th:text="${option}"></span>-->
-<!--                </label>-->
-<!--            </div>-->
+<!--        <div th:each="question : ${test.getQuestions()}">-->
+<!--            <label th:text="${question.getQuestion()}">-->
+<!--                <input type="radio" th:value="${question.getCorrectAnswer()}">-->
+<!--            </label>-->
 <!--        </div>-->
         <button type="submit">Submit Quiz</button>
     </form>
